Add support for Java Platform Module System
Fixes compiler error where internals are not accessible to java9
related code.  Furthermore, a JPMS module is defined for
the datasketches-memory, that can be used to narrow any additional
compiler or runtime arguments for the JPMS.